--- a/appspec.yml
+++ b/appspec.yml
@@ -11,6 +11,10 @@ hooks:
     - location: scripts/start_server
       timeout: 300
       runas: root
+  AfterInstall:
+    - location: scripts/configure_application
+      timeout: 180
+      runas: root
   ApplicationStop:
     - location: scripts/stop_server
       timeout: 300
